Added smiles drawing in 2d model

--- a/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
+++ b/plugins/robots/robotsInterpreter/robotsInterpreter.qrc
@@ -46,5 +46,7 @@
         <file>icons/trik/button_off.png</file>
         <file>icons/trik/button_on.png</file>
         <file>icons/trik/wagon.svg</file>
+        <file>icons/trik/sadSmile.png</file>
+        <file>icons/trik/smile.png</file>
     </qresource>
 </RCC>
