--- a/qrgui/brandManager/styles/styles.qrc
+++ b/qrgui/brandManager/styles/styles.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/styles">
-        <file>styles/commandButton.js</file>
+        <file>commandButton.js</file>
     </qresource>
 </RCC>
