--- a/qrgui/brandManager/styles/styles.qrc
+++ b/qrgui/brandManager/styles/styles.qrc
@@ -1,12 +1,11 @@
 <RCC>
     <qresource prefix="/styles">
-        <file>commandButton.js</file>
-        <file>headerLevel1.js</file>
-        <file>headerLevel2.js</file>
-        <file>headerLevel3.js</file>
-        <file>headerLevel4.js</file>
-        <file>createDiagramButton.js</file>
-        <file>recentProjectButton.js</file>
-        <file>startTabBackround.js</file>
+        <file>startTab/background.js</file>
+        <file>startTab/button.js</file>
+        <file>startTab/header.js</file>
+        <file>startTab/labelLevel1.js</file>
+        <file>startTab/labelLevel2.js</file>
+        <file>startTab/projectsManagementBackground.js</file>
+        <file>startTab/recentProjectsBackground.js</file>
     </qresource>
 </RCC>
