--- a/plugins/robots/robotsInterpreter/robotSettingsPage.ui
+++ b/plugins/robots/robotsInterpreter/robotSettingsPage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>693</height>
+    <width>423</width>
+    <height>711</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -240,12 +240,15 @@
       <item row="0" column="0">
        <widget class="QCheckBox" name="enableSensorNoiseCheckBox">
         <property name="text">
-         <string>Enable sensor noise</string>
+         <string>Realistic sensors</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="approximationLabel">
+        <property name="toolTip">
+         <string>For higher value the behaviour is closer to realistic but performance is lower.</string>
+        </property>
         <property name="text">
          <string>Approximation level</string>
         </property>
@@ -273,7 +276,7 @@
       <item row="0" column="1">
        <widget class="QCheckBox" name="enableMotorNoiseCheckBox">
         <property name="text">
-         <string>Enable motor noise</string>
+         <string>Realistic engines</string>
         </property>
        </widget>
       </item>
@@ -314,7 +317,7 @@
      <property name="title">
       <string>Graphics Watcher update intervals</string>
      </property>
-	 <layout class="QHBoxLayout" name="horizontalLayout1">
+     <layout class="QHBoxLayout" name="horizontalLayout1">
       <item>
        <widget class="QGroupBox" name="sensorUpdateBox">
         <property name="title">
