--- a/qrgui/brandManager/styles/styles.qrc
+++ b/qrgui/brandManager/styles/styles.qrc
@@ -7,5 +7,6 @@
         <file>startTab/labelLevel2.js</file>
         <file>startTab/projectsManagementBackground.js</file>
         <file>startTab/recentProjectsBackground.js</file>
+        <file>startTab/substrate.js</file>
     </qresource>
 </RCC>
