--- a/plugins/robots/trikGenerator/templates.qrc
+++ b/plugins/robots/trikGenerator/templates.qrc
@@ -10,6 +10,8 @@
         <file>templates/main.t</file>
         <file>templates/comment.t</file>
         <file>templates/led.t</file>
+        <file>templates/say.t</file>
+        <file>templates/system.t</file>
         <file>templates/display/setBackground.t</file>
         <file>templates/display/smile.t</file>
         <file>templates/display/sadSmile.t</file>
