--- a/qrgui/dialogs/preferencesPages/editorPage.ui
+++ b/qrgui/dialogs/preferencesPages/editorPage.ui
@@ -38,9 +38,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
-        <width>466</width>
-        <height>806</height>
+        <y>-234</y>
+        <width>463</width>
+        <height>852</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -700,6 +700,41 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_16">
+         <property name="text">
+          <string>Minimap</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSlider" name="miniMapSize">
+         <property name="minimum">
+          <number>100</number>
+         </property>
+         <property name="maximum">
+          <number>300</number>
+         </property>
+         <property name="singleStep">
+          <number>10</number>
+         </property>
+         <property name="pageStep">
+          <number>20</number>
+         </property>
+         <property name="value">
+          <number>100</number>
+         </property>
+         <property name="sliderPosition">
+          <number>100</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="tickInterval">
+          <number>25</number>
+         </property>
         </widget>
        </item>
        <item>
