--- a/qrgui/mainwindow/mainWindow.ui
+++ b/qrgui/mainwindow/mainWindow.ui
@@ -14,7 +14,7 @@
    <string>QReal</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="qrgui.qrc">
+   <iconset resource="../qrgui.qrc">
     <normaloff>:/icons/qreal.png</normaloff>:/icons/qreal.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -45,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>843</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -134,55 +134,6 @@
    <addaction name="actionNew_Diagram"/>
    <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
-  </widget>
-  <widget class="QDockWidget" name="minimapDock">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>80</width>
-     <height>211</height>
-    </size>
-   </property>
-   <property name="windowTitle">
-    <string>Mini Map</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>2</number>
-   </attribute>
-   <widget class="QWidget" name="minimapDockWidgetContents">
-    <layout class="QVBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="MiniMap" name="minimapView">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
   </widget>
   <widget class="QDockWidget" name="paletteDock">
    <property name="sizePolicy">
@@ -274,24 +225,18 @@
    <widget class="QWidget" name="logicalModelDockWidgetContents">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-	  <widget class="qReal::gui::ModelExplorer" name="logicalModelExplorer">
+      <widget class="qReal::gui::ModelExplorer" name="logicalModelExplorer" native="true">
        <property name="contextMenuPolicy">
         <enum>Qt::ActionsContextMenu</enum>
        </property>
        <property name="acceptDrops">
         <bool>true</bool>
        </property>
-       <property name="dragEnabled">
+       <property name="dragEnabled" stdset="0">
         <bool>false</bool>
        </property>
-       <property name="dragDropOverwriteMode">
+       <property name="dragDropOverwriteMode" stdset="0">
         <bool>false</bool>
-       </property>
-       <property name="dragDropMode">
-        <enum>QAbstractItemView::DragDrop</enum>
-       </property>
-       <property name="defaultDropAction">
-        <enum>Qt::IgnoreAction</enum>
        </property>
       </widget>
      </item>
@@ -347,7 +292,7 @@
    <widget class="QWidget" name="graphicalModelDockWidgetContents">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-	  <widget class="qReal::gui::ModelExplorer" name="graphicalModelExplorer">
+      <widget class="qReal::gui::ModelExplorer" name="graphicalModelExplorer" native="true">
        <property name="contextMenuPolicy">
         <enum>Qt::ActionsContextMenu</enum>
        </property>
@@ -440,7 +385,7 @@
   </action>
   <action name="actionZoom_In">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/zoomin.png</normaloff>:/icons/zoomin.png</iconset>
    </property>
    <property name="text">
@@ -452,7 +397,7 @@
   </action>
   <action name="actionZoom_Out">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/zoomout.png</normaloff>:/icons/zoomout.png</iconset>
    </property>
    <property name="text">
@@ -483,7 +428,7 @@
   </action>
   <action name="actionPrint">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/print.png</normaloff>:/icons/print.png</iconset>
    </property>
    <property name="text">
@@ -625,7 +570,7 @@
   </action>
   <action name="actionGenerate_and_build">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/build.png</normaloff>:/icons/build.png</iconset>
    </property>
    <property name="text">
@@ -752,7 +697,7 @@
   </action>
   <action name="actionUndo">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/undo.png</normaloff>:/icons/undo.png</iconset>
    </property>
    <property name="text">
@@ -764,7 +709,7 @@
   </action>
   <action name="actionRedo">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/redo.png</normaloff>:/icons/redo.png</iconset>
    </property>
    <property name="text">
@@ -800,11 +745,6 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MiniMap</class>
-   <extends>QGraphicsView</extends>
-   <header>mainwindow/miniMap.h</header>
-  </customwidget>
-  <customwidget>
    <class>qReal::gui::TabWidget</class>
    <extends>QWidget</extends>
    <header>mainwindow/tabWidget.h</header>
@@ -816,8 +756,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="qrgui.qrc"/>
-  <include location="qrgui.qrc"/>
+  <include location="../qrgui.qrc"/>
  </resources>
  <connections/>
 </ui>
