icons added. sticking fix

--- a/qrgui/qrgui.qrc
+++ b/qrgui/qrgui.qrc
@@ -46,6 +46,8 @@
         <file>icons/startTab/open.svg</file>
         <file>icons/startTab/createInterpreted.svg</file>
         <file>icons/startTab/openInterpreted.svg</file>
+        <file>icons/hide.png</file>
+        <file>icons/show.png</file>
     </qresource>
     <qresource prefix="/images">
         <file>icons/slavery.jpg</file>
