Added encoders generation for trik

--- a/plugins/robots/trikGenerator/templates.qrc
+++ b/plugins/robots/trikGenerator/templates.qrc
@@ -100,5 +100,6 @@
         <file>templates/engines/backward.t</file>
         <file>templates/engines/forward.t</file>
         <file>templates/engines/stop.t</file>
+        <file>templates/engines/nullifyEncoder.t</file>
     </qresource>
 </RCC>
