--- a/qrgui/mainwindow/mainWindow.ui
+++ b/qrgui/mainwindow/mainWindow.ui
@@ -14,7 +14,7 @@
    <string>QReal</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="qrgui.qrc">
+   <iconset resource="../qrgui.qrc">
     <normaloff>:/icons/qreal.png</normaloff>:/icons/qreal.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -45,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>843</width>
-     <height>19</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -98,16 +98,8 @@
     <property name="title">
      <string>&amp;Tools</string>
     </property>
-    <widget class="QMenu" name="menuEasy_versioning">
-     <property name="title">
-      <string>Easy versioning</string>
-     </property>
-     <addaction name="actionList_of_version"/>
-     <addaction name="actionSave_version"/>
-    </widget>
-    <addaction name="actionShow"/>
-    <addaction name="menuEasy_versioning"/>
     <addaction name="actionGesturesShow"/>
+    <addaction name="actionList_of_version_3"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -154,8 +146,8 @@
    </property>
    <property name="minimumSize">
     <size>
-	 <width>80</width>
-	 <height>211</height>
+     <width>80</width>
+     <height>211</height>
     </size>
    </property>
    <property name="windowTitle">
@@ -284,24 +276,18 @@
    <widget class="QWidget" name="logicalModelDockWidgetContents">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-	  <widget class="qReal::gui::ModelExplorer" name="logicalModelExplorer">
+      <widget class="qReal::gui::ModelExplorer" name="logicalModelExplorer" native="true">
        <property name="contextMenuPolicy">
         <enum>Qt::ActionsContextMenu</enum>
        </property>
        <property name="acceptDrops">
         <bool>true</bool>
        </property>
-       <property name="dragEnabled">
+       <property name="dragEnabled" stdset="0">
         <bool>false</bool>
        </property>
-       <property name="dragDropOverwriteMode">
+       <property name="dragDropOverwriteMode" stdset="0">
         <bool>false</bool>
-       </property>
-       <property name="dragDropMode">
-        <enum>QAbstractItemView::DragDrop</enum>
-       </property>
-       <property name="defaultDropAction">
-        <enum>Qt::IgnoreAction</enum>
        </property>
       </widget>
      </item>
@@ -357,7 +343,7 @@
    <widget class="QWidget" name="graphicalModelDockWidgetContents">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-	  <widget class="qReal::gui::ModelExplorer" name="graphicalModelExplorer">
+      <widget class="qReal::gui::ModelExplorer" name="graphicalModelExplorer" native="true">
        <property name="contextMenuPolicy">
         <enum>Qt::ActionsContextMenu</enum>
        </property>
@@ -450,7 +436,7 @@
   </action>
   <action name="actionZoom_In">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/zoomin.png</normaloff>:/icons/zoomin.png</iconset>
    </property>
    <property name="text">
@@ -462,7 +448,7 @@
   </action>
   <action name="actionZoom_Out">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/zoomout.png</normaloff>:/icons/zoomout.png</iconset>
    </property>
    <property name="text">
@@ -493,7 +479,7 @@
   </action>
   <action name="actionPrint">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/print.png</normaloff>:/icons/print.png</iconset>
    </property>
    <property name="text">
@@ -635,7 +621,7 @@
   </action>
   <action name="actionGenerate_and_build">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/build.png</normaloff>:/icons/build.png</iconset>
    </property>
    <property name="text">
@@ -773,7 +759,7 @@
   </action>
   <action name="actionUndo">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/undo.png</normaloff>:/icons/undo.png</iconset>
    </property>
    <property name="text">
@@ -785,7 +771,7 @@
   </action>
   <action name="actionRedo">
    <property name="icon">
-    <iconset resource="qrgui.qrc">
+    <iconset resource="../qrgui.qrc">
      <normaloff>:/icons/redo.png</normaloff>:/icons/redo.png</iconset>
    </property>
    <property name="text">
@@ -815,12 +801,22 @@
   </action>
   <action name="actionSet_version">
    <property name="text">
-	<string>Set version</string>
+    <string>Set version</string>
    </property>
-   </action>
+  </action>
   <action name="actionExportToXml">
    <property name="text">
-	<string>Export to XML</string>
+    <string>Export to XML</string>
+   </property>
+  </action>
+  <action name="actionList_of_version_2">
+   <property name="text">
+    <string>List of version</string>
+   </property>
+  </action>
+  <action name="actionList_of_version_3">
+   <property name="text">
+    <string>List of version</string>
    </property>
   </action>
  </widget>
@@ -860,8 +856,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="qrgui.qrc"/>
-  <include location="qrgui.qrc"/>
+  <include location="../qrgui.qrc"/>
  </resources>
  <connections/>
 </ui>
