--- a/plugins/robots/fSharpGenerator/templates.qrc
+++ b/plugins/robots/fSharpGenerator/templates.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/trik">
+    <qresource prefix="/fSharp">
         <file>templates/beep.t</file>
         <file>templates/break.t</file>
         <file>templates/continue.t</file>
