Сохраняется версия при вызове списка версий. Изменения в ChangeVersion.ui

--- a/qrgui/versioning/transparentMode/ChangeVersion.ui
+++ b/qrgui/versioning/transparentMode/ChangeVersion.ui
@@ -14,13 +14,33 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+   <item row="3" column="1">
+    <widget class="QPushButton" name="pushButton">
+     <property name="text">
+      <string>Load this.</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
     <widget class="QListWidget" name="listWidgetForLog"/>
    </item>
-   <item row="0" column="0">
+   <item row="3" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Double click on version.</string>
+      <string>status</string>
      </property>
     </widget>
    </item>
