--- a/qrgui/dialogs/preferencesPages/paletteEditorPage.ui
+++ b/qrgui/dialogs/preferencesPages/paletteEditorPage.ui
@@ -13,11 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
-    <widget class="QListWidget" name="listWidget"/>
-   </item>
-  </layout>
+  <layout class="QGridLayout" name="gridLayout"/>
  </widget>
  <resources/>
  <connections/>
