--- a/qrgui/dialogs/preferencesPages/paletteEditorPage.ui
+++ b/qrgui/dialogs/preferencesPages/paletteEditorPage.ui
@@ -15,8 +15,8 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0" colspan="2">
-    <widget class="QWidget" name="widget" native="true">
-     <layout class="QGridLayout" name="gridLayout_2" rowstretch="0" columnstretch="0">
+    <widget class="QWidget" name="widgetPalette" native="true">
+     <layout class="QGridLayout" name="gridLayoutWidget" rowstretch="0" columnstretch="0">
       <property name="leftMargin">
        <number>9</number>
       </property>
